<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/locIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/locRequestIconDescription"
        android:scaleType="center"
        android:src="@drawable/location_pin" />

    <TextView
        android:id="@+id/locTitleText"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locIcon"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/locRequestTitle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locTitleText"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/locRequestMessage"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/locButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/locNegativeButton"
            style="@style/Widget.AppCompat.Button.Borderless.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNegative"
            android:text="@string/locRequestDenyButton"
            tools:ignore="OnClick" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/locOkButton"
            style="@style/Widget.AppCompat.Button.Borderless.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickOk"
            android:text="@string/locRequestOkButton"
            tools:ignore="OnClick" />
    </LinearLayout>

</RelativeLayout>
