<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:paddingLeft="16dp"
  android:paddingRight="16dp">

  <TextView
    android:id="@+id/domainAppAssociationTitleText"
    style="@android:style/Widget.DeviceDefault.Light.TextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:gravity="center"
    android:padding="10dp"
    android:text="@string/domainAppAssociationTitle"
    android:textSize="25sp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/domainAppAssociationMessageText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/domainAppAssociationTitleText"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:padding="20dp"
    android:text="@string/domainAppAssociationMessage"
    android:textSize="18sp" />

  <LinearLayout
    android:id="@+id/domainAppAssociationButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <Button
      android:id="@+id/domainAppAssociationNegativeButton"
      style="@style/borderlessButton"
      android:onClick="onClickNegative"
      android:text="@string/domainAppAssociationRequestDenyButton"
      tools:ignore="OnClick" />

    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1" />

    <Button
      android:id="@+id/domainAppAssociationOkButton"
      style="@style/borderlessButton"
      android:onClick="onClickOk"
      android:text="@string/domainAppAssociationRequestOkButton"
      tools:ignore="OnClick" />
  </LinearLayout>

</RelativeLayout>
