<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ProgressBar
        android:id="@+id/progressBarIcon"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/loadingIconDescription"
        android:padding="20dp" />

    <TextView
        android:id="@+id/upgradingTitleText"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBarIcon"
        android:layout_marginTop="5dp"
        android:padding="20dp"
        android:text="@string/upgradingTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/upgradingMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upgradingTitleText"
        android:padding="20dp"
        android:text="@string/upgradingMessage"
        android:textSize="18sp" />

</RelativeLayout>
