<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <RelativeLayout
        android:id="@+id/connErrorMessageLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/connErrorTitleText"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:padding="20dp"
            android:text="@string/connErrorTitle"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/connErrorMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connErrorTitleText"
            android:padding="20dp"
            android:text="@string/connErrorMessage"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/connErrorButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connErrorMessageText"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/connErrorMoreInfo"
                style="@style/Widget.AppCompat.Button.Borderless.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickMoreInfo"
                android:text="@string/btnMoreInfo"
                android:textAllCaps="true" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/connErrorRetry"
                style="@style/Widget.AppCompat.Button.Borderless.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRetry"
                android:text="@string/btnRetry"
                android:textAllCaps="true" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/connErrorSpinnerLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBarIcon"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/loadingIconDescription"
            android:padding="20dp" />
    </RelativeLayout>

</RelativeLayout>
